--- a/css/u_so_precious_wen_u_style.css
+++ b/css/u_so_precious_wen_u_style.css
@@ -54,7 +54,7 @@ img.stripes
 {
     position : absolute ;
 	left : 127px;
-	top : -116px;
+	top : -115px;
 	width : 712px;
 	height : 235px;
     z-index: 7;
@@ -62,88 +62,91 @@ img.stripes
 h1.education
 {
 	font-family : Courier New;
-	font-size : 34px;
+	font-size : 55px;
 	color : #E8769C;
 	color : rgb(232, 118, 156);
 	text-decoration : underline;
     font-weight: 200;
     position : absolute ;
 	left : 0px;
-	top : 96px;
+	top : 83px;
 	width : 307px;
 	height : 34px;
     text-align: center;
     background-color: #613581;
     padding: 2px;
-    padding-bottom: 5px;
+    padding-bottom: 30px;
+
 }
 h1.skills
 {
 	font-family : Courier New;
-	font-size : 34px;
+	font-size : 55px;
 	color : #E8769C;
 	color : rgb(232, 118, 156);
 	text-decoration : underline;
     position : absolute ;
 	left : 688px;
-	top : 96px;
+	top : 83px;
 	width : 308px;
 	height : 34px;
     text-align: center;
     background-color: #613581;
     padding: 2px;
-    padding-bottom: 5px;
+    padding-bottom: 30px;
     font-weight: 200;
 }
 h1.info
 {
 	font-family : Courier New;
-	font-size : 34px;
+	font-size : 55px;
 	color : #E8769C;
 	color : rgb(232, 118, 156);
 	text-decoration : underline;
     position : absolute ;
 	left : 0px;
-	top : 243px;
+	top : 264px;
 	width : 203px;
 	height : 34px;
     text-align: center;
     background-color: #613581;
     padding: 2px;
-    padding-bottom: 5px;
+    padding-bottom: 34px;
     font-weight: 200;
 }
 h1.profile
 {
 	font-family : Courier New;
-	font-size : 34px;
+	font-size : 55px;
 	color : #E8769C;
 	color : rgb(232, 118, 156);
 	text-decoration : underline;
     position : absolute ;
-	left : 793px;
-	top : 243px;
+	left : 707px;
+	top : 323px;
 	width : 203px;
 	height : 34px;
     text-align: center;
     background-color: #613581;
     padding: 2px;
-    padding-bottom: 5px;
+    padding-bottom: 30px;
     font-weight: 200;
+    padding-left: 40px;
+    padding-right: 50px;
 }
 p.p1
 {
     position : absolute ;
 	left : 0px;
-	top : 141px;
+	top : 157px;
 	width : 307px;
 	height : 34px;
     text-align: center;
     background-color: #B99AC8;
     padding: 2px;
-    font-size: 19px;
+    font-size: 25px;
     padding-top: 6px;
-    padding-bottom: 12px;
+    padding-bottom: 23px;
     font-family : Courier New;
     color: #613581;
     font-weight: 600;
@@ -152,13 +155,13 @@ p.p2
 {
     position : absolute ;
 	left : 0px;
-	top : 191px;
+	top : 220px;
 	width : 307px;
 	height : 34px;
     text-align: center;
     background-color: #B99AC8;
     padding: 2px;
-    font-size: 19px;
+    font-size: 25px;
     padding-bottom: 20px;
     font-family : Courier New;
     color: #613581;
@@ -167,51 +170,55 @@ p.p2
 ul.sicc
 {
     position : absolute ;
-	left : 403px;
-	top : 144px;
-	width : 308px;
+	left : 688px;
+	top : 157px;
+	width : 272px;
 	height : 34px;
     text-align: center;
     background-color: #B99AC8;
-    padding-bottom: 66px;
+    padding-bottom: 138px;
     padding-top: 7px;
     font-family : Courier New;
     color: #613581;
     font-weight: 600;
+    list-style-position: inside;
+    font-size: 25px
 }
 
 p.help
 {
     position : absolute ;
 	left : 0px;
-	top : 290px;
+	top : 339px;
 	width : 203px;
 	height : 34px;
     text-align: center;
     background-color: #B99AC8;
     padding: 2px;
-    padding-bottom: 27px;
+    padding-bottom: 81px;
     padding-top: 7px;
     font-family : Courier New;
     color: #613581;
     font-weight: 600;
+    font-size: 25px
 }
 
 ul.qualities
 {
     position : absolute ;
-	left : 505px;
-	top : 290px;
-	width : 203px;
+	left : 707px;
+	top : 401px;
+	width : 181px;
 	height : 34px;
     text-align: center;
     background-color: #B99AC8;
     padding: 2px;
-    padding-bottom: 20px;
+    padding-right: 45px;
     padding-top: 7px;
-    padding-left: 24px;
-    padding-bottom: 27px;
+    padding-left: 67px;
+    padding-bottom: 115px;
     font-family : Courier New;
     color: #613581;
     font-weight: 600;
+    font-size: 25px;
 }
